Temporary Fix - Stretch Country Flag to Fit Country List Item Box

--- a/src/components/CountryListItem/CountryListItem.module.scss
+++ b/src/components/CountryListItem/CountryListItem.module.scss
@@ -5,6 +5,6 @@
     img {
         width: 35vmin;
         height: 20vmin;
-        /* object-fit: cover; */
+        object-fit: cover;
     }
 }
